# CG

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
agent-room/: CLAUDE.md  sergeant_resurrection.md
agent-room/agents/: corporal.md  whisky_bottle.md
agent-room/corporal_orders/: add_versions_to_codegraph.md  build_codegraph_minimal.md  build_script.md
agent-room/corporal_orders/codegraph_test_run_orders/: 01_decompose_and_load.md  02_decompose_class.md  03_soldier_refactor_via_context.md  04_decompose_folder.md  06_context_complexity_ab_test.md  07_dunbar_scale_test.md  08_decomposition_style_ab_test.md
agent-room/corporal_reports/: add_versions_to_codegraph_report.md  build_codegraph_minimal_report.md  build_script_report.md
agent-room/corporal_reports/codegraph_test_run_orders/: 01_decompose_and_load_report.md  02_decompose_class_report.md  03_soldier_refactor_via_context_report.md  (+21 more)
agent-room/insight/: dreaming_essence.md  dreaming_initial.md  dunbar_experiment_stage_associations.md  dunbar_validation.md  essence.md  flowing_features.md  oop_research.md  oop_thoughts_human_written.md
docs/: architecture.md  passport_spec.md  quickstart.md
services/codegraph/: build.py  codegraph.db-shm  codegraph.db-wal  db.py  experiment_a.db-shm  experiment_a.db-wal  experiment_b.db-shm  experiment_b.db-wal  experiment_c.db-shm  experiment_c.db-wal  main.py  models.py  register.py
src/mcgk/: __init__.py  config.py  main.py  models.py  persistence.py
src/messenger/: main.py
tests/: conftest.py  nightmare.py  test_core.py  test_nightmare.py
(+2 files in other folders)
